package mob;

import "base.proto";

option java_package = "es.tid.ps.mobility.data";
option java_outer_classname = "MobProtocol";

message Cdr {
    required uint64 userId = 1;
    required uint64 cellId = 2;
    required base.Date date = 3;
    required base.Time time = 4;
}

message Cell {
    required uint64 cellId = 1;
    required uint64 placeId = 2;
    required uint32 geoloc1 = 3;
    required uint32 geoloc2 = 4;
    required double posx = 5;
    required double posy = 6;
}

message UTMPoint {
    required double posx = 1;
    required double posy = 2;
}

message GMTPoint {
    required double lat = 1;
    required double lon = 2;
}

message Bts {
    required uint64 placeId = 1;
    required double posx = 2;
    required double posy = 3;
    required double lat = 4;
    required double lon = 5;
    required double area = 6;
    repeated UTMPoint utm_polygon = 7;
    repeated GMTPoint gmt_polygon = 8;
    repeated uint64 adj_bts = 9;
}

message NodeBts {
    required uint64 userId = 1;
    required uint32 placeId = 2;
    required uint32 weekday = 3;
    required uint32 range = 4;
}

message BtsCounter {
    required uint64 placeId = 1;
    required uint32 weekday = 2;
    required uint32 range = 3;
    required uint32 count = 4;
}

message NodeBtsDay {
    required uint64 userId = 1;
    required uint64 placeId = 2;
    required uint32 workday = 3;
    required uint32 count = 4;
}

message NodeMxCounter {
    repeated BtsCounter bts = 1;
    required uint32 btsLength = 2;
    required uint32 btsMaxLength = 3;
}

message TwoInt {
    required uint64 num1 = 1;
    required uint64 num2 = 2;
}

message GLEvent {
    required uint64 userId = 1;
    required uint64 placeId = 2;
    required base.Date date = 3;
    required base.Time time = 4;
}